--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AlbumGuessr - Profile</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
 </head>
 <body>
     <div class="container">
         <div id="site-header"></div>
         <div class="subtitle">
-            <p>Manage your profile and view your statistics</p>
+            <p data-i18n="profile.subtitleOverview">Manage your profile and view your statistics</p>
         </div>
 
         <main id="main-content" class="game-container">
@@ -20,8 +20,8 @@
                 <!-- Profile Settings Section -->
                 <section class="user-history" aria-labelledby="profile-settings-title">
                     <div class="user-history-header">
-                        <h3 id="profile-settings-title"><i class="bi bi-person-circle"></i> Profile Settings</h3>
-                        <div class="user-history-subtitle" id="profile-settings-subtitle">Manage your account information</div>
+                        <h3 id="profile-settings-title"><i class="bi bi-person-circle"></i> <span data-i18n="profile.title">Profile Settings</span></h3>
+                        <div class="user-history-subtitle" id="profile-settings-subtitle" data-i18n="profile.subtitle">Manage your account information</div>
                     </div>
                     <div class="profile-settings-content">
                         <div class="profile-section">
@@ -39,17 +39,17 @@
                             <form id="username-form" class="username-form">
                                 <div class="form-group">
                                     <p style="color: white; font-size: 0.95rem; margin-bottom: 1rem;">
-                                        Current username: <span id="current-username" style="font-weight: 600;"></span>
+                                        <span data-i18n="profile.currentUsername">Current username:</span> <span id="current-username" style="font-weight: 600;"></span>
                                     </p>
                                 </div>
                                 <div class="form-group">
-                                    <label for="new-username">Change username</label>
-                                    <input type="text" id="new-username" class="form-input" placeholder="Enter new username" required minlength="3" maxlength="30">
+                                    <label for="new-username" data-i18n="profile.changeUsername">Change username</label>
+                                    <input type="text" id="new-username" class="form-input" data-i18n-placeholder="profile.placeholder" placeholder="Enter new username" required minlength="3" maxlength="30">
                                 </div>
                                 <div class="form-message" id="username-message"></div>
                                 <button type="submit" class="btn-primary" id="btn-save-username">
                                     <i class="bi bi-check-circle"></i>
-                                    Save Username
+                                    <span data-i18n="profile.saveButton">Save Username</span>
                                 </button>
                             </form>
                         </div>
@@ -59,8 +59,8 @@
                 <!-- Your Found Albums Section -->
                 <section class="user-history" aria-labelledby="stats-title">
                     <div class="user-history-header">
-                        <h3 id="stats-title"><i class="bi bi-person-lines-fill"></i> Your found albums</h3>
-                        <div class="user-history-subtitle" id="user-history-subtitle">Log in to save and see your history</div>
+                        <h3 id="stats-title"><i class="bi bi-person-lines-fill"></i> <span data-i18n="profile.foundAlbums">Your found albums</span></h3>
+                        <div class="user-history-subtitle" id="user-history-subtitle" data-i18n="profile.historySubtitle">Log in to save and see your history</div>
                     </div>
                     <div class="user-history-list" id="user-history-list"></div>
                 </section>
@@ -68,8 +68,8 @@
                 <!-- Your Statistics Section -->
                 <section class="user-history" aria-labelledby="user-stats-title">
                     <div class="user-history-header">
-                        <h3 id="user-stats-title"><i class="bi bi-bar-chart-fill"></i> Your statistics</h3>
-                        <div class="user-history-subtitle" id="user-stats-subtitle">Log in to see your stats</div>
+                        <h3 id="user-stats-title"><i class="bi bi-bar-chart-fill"></i> <span data-i18n="profile.yourStats">Your statistics</span></h3>
+                        <div class="user-history-subtitle" id="user-stats-subtitle" data-i18n="profile.statsSubtitle">Log in to see your stats</div>
                     </div>
                     <div class="stats-cards" id="stats-cards"></div>
                 </section>
@@ -91,13 +91,13 @@
                 <template id="tpl-history-empty">
                     <div class="no-clues" style="padding: 1rem;">
                         <i class="bi bi-inbox"></i>
-                        <p>No wins saved yet. Find a mystery album!</p>
+                        <p data-i18n="profile.noHistory">No wins saved yet. Find a mystery album!</p>
                     </div>
                 </template>
                 <template id="tpl-history-error">
                     <div class="no-clues" style="padding: 1rem;">
                         <i class="bi bi-exclamation-triangle"></i>
-                        <p>Unable to load history. Try again later.</p>
+                        <p data-i18n="profile.historyError">Unable to load history. Try again later.</p>
                     </div>
                 </template>
             </section>
