--- a/frontend/statistics.html
+++ b/frontend/statistics.html
@@ -5,30 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AlbumGuessr - Statistics</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
 </head>
 <body>
     <div class="container">
         <div id="site-header"></div>
         <div class="subtitle">
-            <p>Your saved wins and recent history</p>
+            <p data-i18n="profile.subtitleHistory">Your saved wins and recent history</p>
         </div>
 
         <main id="main-content" class="game-container">
             <div class="stats-grid">
                 <section class="user-history" aria-labelledby="stats-title">
                     <div class="user-history-header">
-                        <h3 id="stats-title"><i class="bi bi-person-lines-fill"></i> Your found albums</h3>
-                        <div class="user-history-subtitle" id="user-history-subtitle">Log in to save and see your history</div>
+                        <h3 id="stats-title"><i class="bi bi-person-lines-fill"></i> <span data-i18n="profile.foundAlbums">Your found albums</span></h3>
+                        <div class="user-history-subtitle" id="user-history-subtitle" data-i18n="profile.historySubtitle">Log in to save and see your history</div>
                     </div>
                     <div class="user-history-list" id="user-history-list"></div>
                 </section>
 
                 <section class="user-history" aria-labelledby="user-stats-title">
                     <div class="user-history-header">
-                        <h3 id="user-stats-title"><i class="bi bi-bar-chart-fill"></i> Your statistics</h3>
-                        <div class="user-history-subtitle" id="user-stats-subtitle">Log in to see your stats</div>
+                        <h3 id="user-stats-title"><i class="bi bi-bar-chart-fill"></i> <span data-i18n="profile.yourStats">Your statistics</span></h3>
+                        <div class="user-history-subtitle" id="user-stats-subtitle" data-i18n="profile.statsSubtitle">Log in to see your stats</div>
                     </div>
                     <div class="stats-cards" id="stats-cards"></div>
                 </section>
@@ -50,13 +50,13 @@
                 <template id="tpl-history-empty">
                     <div class="no-clues" style="padding: 1rem;">
                         <i class="bi bi-inbox"></i>
-                        <p>No wins saved yet. Find a mystery album!</p>
+                        <p data-i18n="profile.noHistory">No wins saved yet. Find a mystery album!</p>
                     </div>
                 </template>
                 <template id="tpl-history-error">
                     <div class="no-clues" style="padding: 1rem;">
                         <i class="bi bi-exclamation-triangle"></i>
-                        <p>Unable to load history. Try again later.</p>
+                        <p data-i18n="profile.historyError">Unable to load history. Try again later.</p>
                     </div>
                 </template>
             </section>
