--- a/frontend/cover-guess.html
+++ b/frontend/cover-guess.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AlbumGuessr - Cover Guess</title>
+    <title data-i18n-title="pageTitles.coverGuess">AlbumGuessr - Cover Guess</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
@@ -14,7 +14,7 @@
         
         <main id="main-content" class="game-container">
             <div class="cover-guess-wrapper">
-                <h2>Cover Guess</h2>
+                <h2 data-i18n="nav.coverGuess">Cover Guess</h2>
                 
                 <!-- Cover area with 4x4 grid -->
                 <div class="cover-reveal-container">
@@ -46,7 +46,8 @@
                         <input 
                             type="text" 
                             id="album-search" 
-                            placeholder="Rechercher un album ou un artiste..."
+                            data-i18n-placeholder="game.searchPlaceholder"
+                            placeholder="Search an album or an artist..."
                             autocomplete="off"
                         >
                     </div>
@@ -55,7 +56,7 @@
 
                 <!-- Next hint button -->
                 <button id="next-hint-btn" class="next-hint-btn-small">
-                    <i class="bi bi-eye"></i> <span>Révéler le carré suivant</span>
+                    <i class="bi bi-eye"></i> <span data-i18n="game.coverGuess.nextHint">Reveal next square</span>
                 </button>
 
                 <!-- Guesses History -->
@@ -100,7 +101,7 @@
     <div class="loading" id="loading">
         <img src="img/logo.png" alt="AlbumGuessr" style="width: 300px; margin-bottom: 2rem;">
         <div class="spinner"></div>
-        <p>Loading the mystery album...</p>
+        <p data-i18n="game.coverGuess.loading">Loading the mystery album...</p>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/algoliasearch@4.14.3/dist/algoliasearch.umd.js"></script>
