ajout du type d'artiste dans les clues

--- a/frontend/game.html
+++ b/frontend/game.html
@@ -196,6 +196,10 @@
             <!-- Clue Category Card -->
             <template id="tpl-clue-category">
                 <div class="clue-category">
+                    <div class="clue-category-title">
+                        <i></i>
+                        <span class="clue-category-label"></span>
+                    </div>
                     <div class="clue-values"></div>
                 </div>
             </template>
