ajustement des btn de la home

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -43,7 +43,7 @@
                             <span data-i18n="nav.archives">All albums</span>
                         </a>
                         <a href="game.html" class="nav-button">
-                            <i class="bi bi-controller"></i>
+                            <i class="bi bi-shuffle"></i>
                             <span data-i18n="nav.randomAlbum">Random album</span>
                         </a>
                         <a href="cover-guess.html" class="nav-button">
