ajout d'un btn submit dans le champ de recherche

--- a/frontend/game.html
+++ b/frontend/game.html
@@ -31,6 +31,15 @@
                                 placeholder="Search an album or an artist..."
                                 autocomplete="off"
                             >
+                            <button 
+                                type="button" 
+                                id="search-submit" 
+                                class="search-submit-btn"
+                                disabled
+                                aria-label="Submit guess"
+                            >
+                                <i class="bi bi-search"></i>
+                            </button>
                         </div>
                         <div class="search-results" id="search-results"></div>
                     </div>
