--- a/frontend/game.html
+++ b/frontend/game.html
@@ -13,7 +13,7 @@
         <div id="site-header"></div>
         <div class="subtitle">
             <p data-i18n="game.subtitle">Find the mystery album using the revealed clues.</p>
-            <div class="date" id="game-date"></div>
+            <p class="daily-instruction" id="game-date"></p>
         </div>
 
         <main id="main-content" class="game-container">
