genre based random game and cover game

--- a/frontend/game.html
+++ b/frontend/game.html
@@ -17,6 +17,9 @@
         </div>
 
         <main id="main-content" class="game-container">
+            <!-- Genre Filter Sidebar (for random game) -->
+            <div id="genre-filter-container"></div>
+            
             <div class="content-grid">
                 <div class="main-column">
                    
