add google analytics support

--- a/frontend/past-dailies.html
+++ b/frontend/past-dailies.html
@@ -65,6 +65,7 @@
 
     <script src="https://cdn.auth0.com/js/auth0-spa-js/2.1/auth0-spa-js.production.js"></script>
     <script src="config.js"></script>
+    <script src="analytics.js"></script>
     <script src="includes.js"></script>
     <script src="nav.js"></script>
     <script type="module" src="past-dailies.js"></script>
