--- a/frontend/statistics.html
+++ b/frontend/statistics.html
@@ -64,6 +64,7 @@
 
     <script src="https://cdn.auth0.com/js/auth0-spa-js/2.1/auth0-spa-js.production.js"></script>
     <script src="config.js"></script>
+    <script src="analytics.js"></script>
     <script src="includes.js"></script>
     <script src="nav.js"></script>
     <script type="module" src="stats.js"></script>
