--- a/frontend/cover-guess.html
+++ b/frontend/cover-guess.html
@@ -110,6 +110,7 @@
     <script src="https://cdn.jsdelivr.net/npm/algoliasearch@4.14.3/dist/algoliasearch.umd.js"></script>
     <script src="https://cdn.auth0.com/js/auth0-spa-js/2.1/auth0-spa-js.production.js"></script>
     <script src="config.js"></script>
+    <script src="analytics.js"></script>
     <script src="includes.js"></script>
     <script src="nav.js"></script>
     <script type="module" src="cover-guess.js"></script>
