--- a/frontend/how-to-play.html
+++ b/frontend/how-to-play.html
@@ -119,6 +119,7 @@
 
     <script src="https://cdn.auth0.com/js/auth0-spa-js/2.1/auth0-spa-js.production.js"></script>
     <script src="config.js"></script>
+    <script src="analytics.js"></script>
     <script src="includes.js"></script>
     <script src="nav.js"></script>
     <script src="js/shared/i18n.js"></script>
