--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -87,6 +87,7 @@
 
     <script src="https://cdn.auth0.com/js/auth0-spa-js/2.1/auth0-spa-js.production.js"></script>
     <script src="config.js"></script>
+    <script src="analytics.js"></script>
     <script src="includes.js"></script>
     <script src="nav.js"></script>
     <script type="module" src="profile.js"></script>
