--- a/frontend/report-bug.html
+++ b/frontend/report-bug.html
@@ -56,6 +56,7 @@
     <script src="https://cdn.auth0.com/js/auth0-spa-js/2.1/auth0-spa-js.production.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script src="config.js"></script>
+    <script src="analytics.js"></script>
     <script src="includes.js"></script>
     <script src="nav.js"></script>
     <script type="module" src="report-bug.js"></script>
