fix du drag de l'image de cover guessr

--- a/frontend/cover-guess.html
+++ b/frontend/cover-guess.html
@@ -79,7 +79,7 @@
                 <!-- Cover area with 4x4 grid -->
                 <div class="cover-reveal-container">
                     <div class="cover-mask" id="cover-mask">
-                        <img id="mystery-cover" alt="Mystery Album Cover">
+                        <img id="mystery-cover" alt="Mystery Album Cover" draggable="false">
                         <div class="cover-zone" data-zone="0"></div>
                         <div class="cover-zone" data-zone="1"></div>
                         <div class="cover-zone" data-zone="2"></div>
